<resources>
    <string name="welcome">Hi, This application will demonstrate how a remote service can be started, stopped, bound to and released</string>
    <string name="app_name">Remote Service</string>
    <string name="startButton">Start</string>
    <string name="stopButton">Stop</string>
    <string name="bindButton">Bind</string>
    <string name="releaseButton">Release</string>
    <string name="invokeButton">Invoke</string>
    <string name="serviceStatus">Service Status</string>
    <string name="notApplicable">N/A</string>
    <string name="no_comments">No comments</string>
    <string name="loading_comments">Loading comments...</string>
    <string name="loading_products">Loading products...</string>
    <string name="cd_products_list">Products list</string>
    <string name="cd_comments_list">Comments list</string>
    <string name="cd_product_name">Name of the product</string>
</resources>
